packages/preview/prometeu-thesis/0.2.0/README.md
# prometeu-thesis

The unofficial Typst template for writing theses at the University of Minho (UMinho). 

<img src="thumbnail.png" alt="Template cover thumbnail" width="300"/>

It is based on the [official LaTeX template provided by the Department of Informatics](https://web.di.uminho.pt/sitedi/latex/) and fully complies with the [university’s required formatting standards and guidelines](https://alunos.uminho.pt/PT/estudantes/Paginas/InfoUteisFormatacao.aspx). 

This template closely follows the LaTeX version, while providing improvements in features, usability and presentation. It is designed to be as extensible, customizable, and comprehensible as possible right out of the box.

You can find the unmodified output of the template in [example.pdf](./example.pdf).

## How to use this template

### Setting up fonts

This template requires the following fonts: NewsGotT (001.005), NewsGotTBold (001.005) and NewsGoth Lt BT (2.001 mfgpctt 4.4).

Unfortunately, Typst [disallows font files to be bundled in packages](https://github.com/typst/packages/blob/main/docs/resources.md#fonts-are-not-supported-in-packages). The original fonts (.ttf files) should be grabbed from the zip file on the [official LaTeX template](https://web.di.uminho.pt/sitedi/latex/).

### Using on Typst Web

Create a new project by selecting "Start from template" and searching for this project. Then create a `fonts` folder in your project and add the three required fonts there.
 
### Using Locally

To work locally, first [install Typst](https://typst.app/open-source/), then initialize your project with:
```
typst init @preview/prometeu-thesis:0.2.0
```

Make the required fonts available by either installing them system-wide (use `typst fonts` to verify detection) or by placing them in a folder of your choice (e.g., `./fonts`) and referencing it via your Typst LSP settings or use the CLI option `--font-path <folder>`.

---

Always ensure that the output generated by this template complies with the latest formatting standards.

### Portuguese Version

Out of the box, the template's cover fields, section titles, and the university name are in English.

To switch these to Portuguese, set the `language` parameter to `"pt"` in the `#show: thesis` call within your `main.typ` file.

This does **not** automatically translate your thesis body text or the preamble pages' content (e.g., "Acknowledgements" or the "Statement of Integrity""). You will need to write your own translations for those, as they are not included with the template. You can refer to the official LaTeX template for the original Portuguese translations: [official template](https://web.di.uminho.pt/sitedi/latex/).

## Current Limitations

Currently, this template only supports covers for Master's theses and does not yet accommodate Doctoral (PhD) theses.

By default, the template includes only the required School of Engineering logos for the cover, but you can easily change these to your own school's logo. The official and high-resolution logos are available in the [official formatting guidelines](https://alunos.uminho.pt/PT/estudantes/Paginas/InfoUteisFormatacao.aspx).

## License

This template is provided under the [MIT License](./LICENSE).

The official logos located in [template/logos/uminho](./template/logos/uminho) are the property of Universidade do Minho. They are not covered by the [LICENSE](./LICENSE) included with this template and remain under the copyright of the university.

